# django-tasks-cloud-tasks

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
django_tasks_cloud_tasks/: __init__.py  apps.py  auth.py  backends.py  detection.py  executor.py  urls.py  views.py
examples/: README.md
examples/sample_project/sample_app/: __init__.py  apps.py  tasks.py  urls.py  views.py
examples/sample_project/sample_app/templates/sample_app/: index.html  result.html
examples/sample_project/sample_project/: __init__.py  settings.py  urls.py  wsgi.py
tests/: settings.py  tasks.py  test_backends.py  test_detection.py  test_executor.py  test_views.py
